<resources>
    <string name="app_name">FirebaseAssignment</string>
    <string name="String1">Welcome</string>
    <string name="String2">Existing user</string>
    <string name="String3">Login</string>
    <string name="String4">New User</string>
    <string name="String5">Sign Up</string>
    <string name="String6">Welcome Back</string>
    <string name="String7">Create Account</string>
    <string name="String8">Username</string>
    <string name="String9">Email</string>
    <string name="String10">Password</string>
    <string name="String11">Re-enter password</string>
    <string name="String12">View Gallery</string>
    <string name="String13">View latest location</string>
    <string name="String14">Upload Image</string>

</resources>